Positioning and sizing of content for mobile and sm screen size

--- a/src/app.css
+++ b/src/app.css
@@ -5,8 +5,14 @@
   font-family: 'Eiko-Heading';
   src: url('/static/fonts/PPEiko-Light.woff2') format('woff2');
 }
+@font-face {
+  font-family: 'Eiko-Italic';
+  src: url('/static/fonts/PPEiko-ThinItalic.woff2') format('woff2');
+}
 * {
   font-family: 'Eiko-Heading';
 }
-
+blockquote {
+  font-family: 'Eiko-Italic';
+}
 @tailwind utilities;
